# key-python-mission

./: Dockerfile  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
app/: .flake8  manage.py  pyproject.toml
app/mission/: settings.py  urls.py
